Fix skills section overlaping - take 2

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -114,7 +114,7 @@ body {
 }
 
 .section-skills-height {
-    height: 800px;
+    height: 900px;
 }
 
 .scroll-into {
